# sysadmin

./: .gitignore  FIVE_PILLARS_CYBERSEC.md  GIT__readme.md  README.md  SNAP_rsync_backups.sh  address_convert_.py  apache_harvest_big_errors.sh  apache_logs_skim_.sh  apache_parse_BETA.py  apache_parser_.py  backup_anything.sh  backup_etc.sh  basic_firewall.py  basic_firewall_.py  basic_firewallrules.json  bind_to_csv.py  blacklist_ips_via_ipset.sh  bodymass.py  check_SSL_ciphers.sh  check_recent_mods.py  check_ssl_.py  clam_scan_REFACTOR.sh  clean_logs.py  compare__.md  countdown_OG.sh  countdown_OG_.sh  crunch_compare_traffic.py  dmarc_fetch_.py  dmarc_fetch_imap.py  exim_threshold__BETA.sh  fail2ban_latest_.md  fail2ban_yo_.md  fail2ban_yo__.txt  gist_love_.md  gists__.md  git_sync_lol.sh  harvest_links_from_target.sh  iptables.md  modsec_deploy_.sh  modsec_deploy_ANCIENT.sh  (+28 more)
ai/agent-safety/: Makefile  README.md  pyproject.toml
ai/agent-safety/agent_safety/: __init__.py  cli.py  models.py  policies.py
ai/agent-safety/agent_safety/adapters/: __init__.py  codex.py  cursor.py
ai/agent-safety/agent_safety/scanners/: __init__.py  agent_context.py  control_files.py  hook_configs.py  tool_calls.py
ai/agent-safety/cursor-hooks/: README.md  audit-tool.sh  hooks.basic.json  hooks.max.json  scan-skill.sh  scan-tool.sh  scan_skill.py  scan_tool.py  validate-agent.sh  validate_agent.py
ai/agent-safety/fixtures/benign/: SKILL.md
ai/agent-safety/fixtures/suspicious/: AGENTS.md  SKILL.md
ai/agent-safety/policies/: default.json  strict.json
ai/agent-safety/tests/: test_adapters.py  test_agent_context.py  test_cli.py  test_control_files.py  test_hook_configs.py  test_models.py  test_policies.py  test_tool_calls.py
ai/mcp/harness/: CONTRIBUTING.md  Makefile  config.yaml  pyproject.toml  readme.md  slayer-config.yaml  trust_chain_test_.py
ai/mcp/harness/action/: README.md  action.yml
(+3283 files in other folders)
