[project]
name = "agent-safety"
version = "0.1.0"
description = "Portable scanners for agent control files, hook payloads, and agent startup context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-safety = "agent_safety.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
