[project]
name = "mcp-slayer"
version = "3.1.0"
description = "OWASP MCP Top 10 security assessment framework for Model Context Protocol architectures."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "pydantic>=2.5",
  "cryptography>=42.0",
  "pyyaml>=6.0",
]

[project.scripts]
mcp-slayer = "mcp_slayer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
